src/snapshots/libflatterer__tests__array_str_after_stream.json-datapackage.json.snap
---
source: src/lib.rs
assertion_line: 2209
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: moo
    flatterer_name: moo
    title: moo
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 2
        - name: _link_main
          title: _link_main
          type: string
          count: 2
        - name: a
          title: a
          type: string
          count: 2
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/moo.csv
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: main
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 1
        - name: flags
          title: flags
          type: string
          count: 1
      primaryKey: _link
    path: csv/main.csv

