src/snapshots/libflatterer__tests__multi.snap
---
source: src/lib.rs
assertion_line: 2587
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: main
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 4999
        - name: time
          title: time
          type: number
          count: 4999
        - name: city_id
          title: city_id
          type: number
          count: 4999
        - name: city_name
          title: city_name
          type: string
          count: 4999
        - name: city_country
          title: city_country
          type: string
          count: 4999
        - name: city_coord_lon
          title: city_coord_lon
          type: number
          count: 4999
        - name: city_coord_lat
          title: city_coord_lat
          type: number
          count: 4999
      primaryKey: _link
    path: csv/main.csv
  - profile: tabular-data-resource
    name: data
    flatterer_name: data
    title: data
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 83192
        - name: _link_main
          title: _link_main
          type: string
          count: 83192
        - name: dt
          title: dt
          type: number
          count: 83192
        - name: rain
          title: rain
          type: number
          count: 50409
        - name: pressure
          title: pressure
          type: number
          count: 83192
        - name: humidity
          title: humidity
          type: number
          count: 83192
        - name: uvi
          title: uvi
          type: number
          count: 83192
        - name: speed
          title: speed
          type: number
          count: 83192
        - name: deg
          title: deg
          type: number
          count: 83192
        - name: clouds
          title: clouds
          type: number
          count: 83192
        - name: temp_day
          title: temp_day
          type: number
          count: 83192
        - name: temp_min
          title: temp_min
          type: number
          count: 83192
        - name: temp_max
          title: temp_max
          type: number
          count: 83192
        - name: temp_night
          title: temp_night
          type: number
          count: 83192
        - name: temp_eve
          title: temp_eve
          type: number
          count: 83192
        - name: temp_morn
          title: temp_morn
          type: number
          count: 83192
        - name: snow
          title: snow
          type: number
          count: 13273
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/data.csv
  - profile: tabular-data-resource
    name: data_weather
    flatterer_name: data_weather
    title: data_weather
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 83192
        - name: _link_data
          title: _link_data
          type: string
          count: 83192
        - name: _link_main
          title: _link_main
          type: string
          count: 83192
        - name: id
          title: id
          type: number
          count: 83192
        - name: main
          title: main
          type: string
          count: 83192
        - name: description
          title: description
          type: string
          count: 83192
        - name: icon
          title: icon
          type: string
          count: 83192
      primaryKey: _link
      foreignKeys:
        - fields: _link_data
          reference:
            resource: data
            fields: _link
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/data_weather.csv

