src/snapshots/libflatterer__tests__nan.json-datapackage.json.snap
---
source: src/lib.rs
expression: "&value"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: contracts
    flatterer_name: contracts
    title: contracts
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 1
          stats:
            min_len: 13
            max_len: 13
            min_str: 0.contracts.0
            max_str: 0.contracts.0
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - 0.contracts.0
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_main
          title: _link_main
          type: string
          format: string
          count: 1
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/contracts.csv
  - profile: tabular-data-resource
    name: contracts_items
    flatterer_name: contracts_items
    title: contracts_items
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 1
          stats:
            min_len: 21
            max_len: 21
            min_str: 0.contracts.0.items.0
            max_str: 0.contracts.0.items.0
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - 0.contracts.0.items.0
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_contracts
          title: _link_contracts
          type: string
          format: string
          count: 1
          stats:
            min_len: 13
            max_len: 13
            min_str: 0.contracts.0
            max_str: 0.contracts.0
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - 0.contracts.0
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_main
          title: _link_main
          type: string
          format: string
          count: 1
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: id
          title: id
          type: number
          format: number
          count: 1
          stats:
            min_len: 3
            max_len: 3
            min_str: "nan"
            max_str: "nan"
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "nan"
                - 1
            sum: 0
            mean: 0
            variance: 0
            stddev: 0
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
      foreignKeys:
        - fields: _link_contracts
          reference:
            resource: contracts
            fields: _link
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/contracts_items.csv
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: main
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 1
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
    path: csv/main.csv

